tests/e2e/fail/ptr_source_type.ep
# COMPILE_ERROR: argument 1 of 'expose' expects ptr, got i64
fun expose(value: ptr): void {
}

fun main(): void {
    expose(0)
}
